Added map auto-resize working, added react-numeric-input

--- a/src/Cursor.css
+++ b/src/Cursor.css
@@ -1,6 +1,5 @@
 #Cursor {
     position: absolute;
-    background: rgba(0, 0, 0, .4);
-    outline: 2px solid rgba(0, 0, 0, 0.75);
+    background: rgb(173, 214, 24);
     z-index: 100;
 }
