--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,10 @@ code {
     font-size: 90%;
 }
 
-/* FIXME: find better solution... */
 #app-bar input {
     color: #fff;
 }
 
 #app-bar label > span:last-of-type {
-    color: #fff !important;;
+    color: #fff !important;
 }
